TestEclipse/src/objects/Line_Item__c.object
<CustomObject>
    <description>A single detail record. The term line item is most commonly used to describe the detail (each line that reflects an item and a quantity) on sales orders or purchase orders.</description>
    <fields>
        <fullName>Invoice_Statement__c</fullName>
        <description>It refers to invoice statement object.</description>
        <label>Invoice Statement</label>
        <referenceTo>Invoice_Statement__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise_Name__c</fullName>
        <description>It refers product on Merchandise object.</description>
        <label>Merchandise Name</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Price of individual item.</description>
        <label>Unit Price</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Sold__c</fullName>
        <description>Number of units sold.</description>
        <label>Unit Sold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Line Item</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>